--- a/index.html.html
+++ b/index.html.html
@@ -2,24 +2,19 @@
 <head> 
 <title> Login and registration form </title>
 <link rel ="stylesheet" href="style.css"> 
- </head>
+<!DOCTYPE.html> 
+</head>
 <body>
  <div class="login-page">
  <div class="form">
-      <form class="register-form">
-  <input type= "text" placeholder= "username" />
-  <input type= "text" placeholder= "password" />
-  <input type= "text" placeholder= "email id" />
-   <button> Create </button>
-<p class="message"> Already registered? <a href="#">Login</a>  </p>
-</form>
+      
 
 <form class="login-form">
   <input type= "text" placeholder= "username" />
   <input type= "text" placeholder= "password" />
   
    <button> Login </button>
-<p class="message"> Not yet registered? <a href="#">Register</a>  </p>
+<p class="message"> Not yet registered? <a href="1.html">Register</a>  </p>
 </form>
 
 </div>
